fix column name